--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
                         <a href="#portfolio">Portfolio</a>
                         <ul>
                             <li><a href="DrugInteracionsdetails.html">Drug Interactions</a></li>
-                            <li><a href="CompoundingDetails.html">Clinical Compounding</a></li>
+                            <li><a href="Compoundingdetails.html">Clinical Compounding</a></li>
                             <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
-                            <li><a href="WebDesignDetails.html">Web design</a></li>
+                            <li><a href="WebDesigndetails.html">Web design</a></li>
                         </ul>
                     </li>
                     <!--<li><a href="#pricing">Pricing</a></li>-->
