--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -74,9 +74,9 @@
                         <a href="index.html#portfolio">Portfolio</a>
                         <ul>
                             <li><a href="DrugInteracionsdetails.html">Drug Interactions</a></li>
-                            <li><a href="CompoundingDetails.html">Clinical Compounding</a></li>
+                            <li><a href="Compoundingdetails.html">Clinical Compounding</a></li>
                             <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
-                            <li><a href="WebDesignDetails.html">Web design</a></li>
+                            <li><a href="WebDesigndetails.html">Web design</a></li>
                         </ul>
                     </li>
                     <li><a href="#contact">Contact</a></li>
