Fixed owl-carousel and improved transitions

--- a/APIdetails.html
+++ b/APIdetails.html
@@ -107,7 +107,7 @@
 
                 <div class="portfolio-details-container">
 
-                    <div class="owl-carousel portfolio-details-carousel">
+                    <div class="owl-carousel profile-carousel">
                         <img src="assets/img/DrugInteractionAPI.png" style="width:auto" class="img-fluid" alt="">
                         <img src="assets/img/DrugInteractionAPIRepo.png" style="width:auto" class="img-fluid" alt="">
 
