--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -107,7 +107,7 @@
 
                 <div class="portfolio-details-container">
 
-                    <div class="owl-carousel portfolio-details-carousel">
+                    <div class="owl-carousel profile-carousel">
                         <img src="assets/img/DrugInteractiondemoClip.gif" style="width:auto" class="img-fluid" alt="">
                         <img src="assets/img/InteractionDetails.png" style="width:auto" class="img-fluid" alt="">
                         <img src="assets/img/InteractionPhone.gif" style="width:auto; height:700px; justify-content:center" class="img-fluid" alt="">
