--- a/Compoundingdetails.html
+++ b/Compoundingdetails.html
@@ -109,7 +109,7 @@
 
                 <div class="portfolio-details-container">
 
-                    <div class="owl-carousel portfolio-details-carousel">
+                    <div class="owl-carousel profile-carousel">
                         <img src="assets/img/AminoMax.gif" style="width:auto" class="img-fluid" alt="">
                         <img src="assets/img/PolicyScrollUnitChange.gif" style="width:auto" class="img-fluid" alt="">
                         
