Removed plus link in portfolio

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                         <div class="portfolio-info">
                             <h4>Drug Interactions</h4>
                             <p>SMART on FHIR App</p>
-                            <a href="assets/img/DrugInteractiondemoClip.gif" title="Drug Interactions"><i class="bx bx-plus"></i></a>
+                            <!--<a href="assets/img/DrugInteractiondemoClip.gif" title="Drug Interactions"><i class="bx bx-plus"></i></a>-->
                             <a href="DrugInteracionsdetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
@@ -437,7 +437,7 @@
                         <div class="portfolio-info">
                             <h4>Clinical Compounding</h4>
                             <p>Cross-Platform App</p>
-                            <a href="assets/img/PolicyScrollUnitChange.gif" title="Clinical Compounding"><i class="bx bx-plus"></i></a>
+                            <!--<a href="assets/img/PolicyScrollUnitChange.gif" title="Clinical Compounding"><i class="bx bx-plus"></i></a>-->
                             <a href="Compoundingdetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
@@ -447,7 +447,7 @@
                         <div class="portfolio-info">
                             <h4>Personal Portfolio</h4>
                             <p>The page you're on right now!</p>
-                            <a href="assets/img/PortfolioSmaller.gif" title="Personal Portfolio"><i class="bx bx-plus"></i></a>
+                            <!--<a href="assets/img/PortfolioSmaller.gif" title="Personal Portfolio"><i class="bx bx-plus"></i></a>-->
                             <a href="WebDesigndetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
@@ -457,7 +457,7 @@
                         <div class="portfolio-info">
                             <h4>DrugInteractionAPI</h4>
                             <p>Open-Source NuGet Package</p>
-                            <a href="assets/img/DrugInteractionAPI.png" title="DrugInteractionAPI"><i class="bx bx-plus"></i></a>
+                            <!--<a href="assets/img/DrugInteractionAPI.png" title="DrugInteractionAPI"><i class="bx bx-plus"></i></a>-->
                             <a href="APIdetails.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
                         </div>
                     </div>
