Added researchdetails and implemented venobox

--- a/WebDesigndetails.html
+++ b/WebDesigndetails.html
@@ -1,31 +1,39 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Web Design</title>
-    <meta content="" name="descriptison">
-    <meta content="" name="keywords">
+    <meta content="" name="descriptison" />
+    <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="assets/img/BigHearts.png" rel="icon">
-    <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
+    <link href="" rel="icon" />
+    <link href="assets/img/BigHearts.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
 
     <!-- Vendor CSS Files -->
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-    <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link
+      href="assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet" />
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
+    <link href="assets/vendor/venobox/venobox.css" rel="stylesheet" />
+    <link
+      href="assets/vendor/owl.carousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/css/style.css" rel="stylesheet" />
 
     <!-- =======================================================
     * Template Name: Day - v2.0.0
@@ -33,120 +41,152 @@
     * Author: BootstrapMade.com
     * License: https://bootstrapmade.com/license/
     ======================================================== -->
-</head>
+  </head>
 
-<body>
-
+  <body>
     <!-- ======= Top Bar ======= -->
-    <div style="background-color:#000000" id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
-        <div class="container d-flex">
-            <div class="contact-info mr-auto">
-                <i class="icofont-envelope"></i> <a href="mailto:jamesbock10@gmail.com">jamesbock10@gmail.com</a>
-                <i class="icofont-phone"></i> 412-613-6129
-            </div>
-            <div class="social-links">
-                <div class="social-links">
-                    <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
-                    <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
-                    <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
-                    <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
-                    <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
-                    <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
-                </div>
-            </div>
+    <div
+      style="background-color: #000000;"
+      id="topbar"
+      class="d-none d-lg-flex align-items-center fixed-top"
+    >
+      <div class="container d-flex">
+        <div class="contact-info mr-auto">
+          <i class="icofont-envelope"></i>
+          <a href="mailto:jamesbock10@gmail.com">jamesbock10@gmail.com</a>
+          <i class="icofont-phone"></i> 412-613-6129
         </div>
+        <div class="social-links">
+          <div class="social-links">
+            <a href="https://github.com/JamesBock/" target="_blank"
+              ><i class="icofont-github"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/james-bock-94886817/"
+              target="_blank"
+              ><i class="icofont-linkedin"></i
+            ></a>
+            <a href="https://www.strava.com/athletes/34465539" target="_blank"
+              ><i class="icofont-runner"></i
+            ></a>
+            <a href="https://www.instagram.com/jamesisfast/" target="_blank"
+              ><i class="icofont-instagram"></i
+            ></a>
+            <a
+              href="https://my.playstation.com/profile/Honus_Swagner"
+              target="_blank"
+              ><i class="icofont-brand-playstation"></i
+            ></a>
+            <a
+              href="http://steamcommunity.com/id/Honus_Swagner/"
+              target="_blank"
+              ><i class="icofont-brand-steam"></i
+            ></a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
-        <div class="container d-flex align-items-center">
+    <header id="header" class="fixed-top">
+      <div class="container d-flex align-items-center">
+        <h1 class="logo mr-auto"><a href="index.html">James Bock</a></h1>
 
-            <h1 class="logo mr-auto"><a href="index.html">James Bock</a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-            <!-- Uncomment below if you prefer to use an image logo -->
-            <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+        <nav class="nav-menu d-none d-lg-block">
+          <ul>
+            <li class="active"><a href="#hero">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li class="drop-down">
+              <a href="#portfolio">Portfolio</a>
+              <ul>
+                <li>
+                  <a href="DrugInteracionsdetails.html">Drug Interactions</a>
+                </li>
+                <li>
+                  <a href="Compoundingdetails.html">Clinical Compounding</a>
+                </li>
+                <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
+                <li><a href="WebDesigndetails.html">Web design</a></li>
+                <li><a href="Researchdetails.html">Health Research</a></li>
+              </ul>
+            </li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
 
-            <nav class="nav-menu d-none d-lg-block">
-                <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#clients">Education</a></li>
-                    <li><a href="index.html#services">Experience</a></li>
-                    <li class="drop-down">
-                        <a href="index.html#portfolio">Portfolio</a>
-                        <ul>
-                            <li><a href="DrugInteracionsdetails.html">Drug Interactions</a></li>
-                            <li><a href="Compoundingdetails.html">Clinical Compounding</a></li>
-                            <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
-                            <li><a href="WebDesigndetails.html">Web design</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#contact">Contact</a></li>
-
-                </ul>
-            </nav><!-- .nav-menu -->
-
-        </div>
-    </header><!-- End Header -->
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <!-- .nav-menu -->
+      </div>
+    </header>
+    <!-- End Header -->
 
     <main id="main">
-
-        <!-- ======= Breadcrumbs ======= -->
-        <section id="breadcrumbs" class="breadcrumbs">
-            <div class="container">
-
-                <ol>
-                    <li><a href="index.html">Home</a></li>
-                    <li>Web design</li>
-                </ol>
-                <h2>Web design</h2>
-
+      <!-- ======= Breadcrumbs ======= -->
+      <section id="breadcrumbs" class="breadcrumbs">
+        <div class="container">
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>Web design</li>
+          </ol>
+          <h2>Web design</h2>
+        </div>
+      </section>
+      <!-- End Breadcrumbs -->
+      <!-- ======= Portfolio Details Section ======= -->
+      <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+          <div class="portfolio-details-container">
+            <a href="assets/img/ShortFolio.gif" class="venobox" data-gall="webGallery"
+              ><img
+                style="width: auto;"
+                class="img-fluid"
+                src="assets/img/ShortFolio.gif"
+                alt=""
+            /></a>
+            <div class="portfolio-info">
+              <h3>Project Summary</h3>
+              <ul>
+                <li>
+                  <strong>Tech</strong>: HTML, CSS, JavaScript, GitHub pages
+                </li>
+                <li><strong>Libraries</strong>: Bootstrap</li>
+                <li><strong>Techniques</strong>: Adaptive design</li>
+                <li><strong>Start date</strong>: May, 2020</li>
+              </ul>
             </div>
-        </section><!-- End Breadcrumbs -->
-        <!-- ======= Portfolio Details Section ======= -->
-        <section id="portfolio-details" class="portfolio-details">
-            <div class="container">
+          </div>
 
-                <div class="portfolio-details-container">
-
-                    <div class="owl-carousel profile-carousel">
-                        <img src="assets/img/ShortFolio.gif" style="width:auto" class="img-fluid" alt="">
-                     
-                    </div>
-
-                    <div class="portfolio-info">
-                        <h3>Project Summary</h3>
-                        <ul>
-                            <li><strong>Tech</strong>: HTML, CSS, JavaScript, GitHub pages</li>
-                            <li><strong>Libraries</strong>: Bootstrap</li>
-                            <li><strong>Techniques</strong>: Adaptive design </li>
-                            <li><strong>Start date</strong>: May, 2020</li>
-                        </ul>
-                    </div>
-
-                </div>
-
-                <div class="portfolio-description">
-                    <h2>Personal Portfolio design</h2>
-                    <p>
-                        In order to find a development team to make awesome projects with, I needed a personal portfolio to show my projects. I had some experience with web technologies through Blazor, but never worked directly with JS before. Starting from a pre-built template, I was able to customize and fine-tune the layout and functions to fit my needs.
-                    </p>
-                    <p>
-                        The process of designing this webpage helped me demystify and enjoy, what I previously saw as unruley, the language of JavaScript.
-                    </p>
-                </div>
-
-            </div>
-        </section><!-- End Portfolio Details Section -->
-
-    </main><!-- End #main -->
+          <div class="portfolio-description">
+            <h2>Personal Portfolio design</h2>
+            <p>
+              In order to find a development team to make awesome projects with,
+              I needed a personal portfolio to show my projects. I had some
+              experience with web technologies through Blazor, but never worked
+              directly with JS before. Starting from a pre-built template, I was
+              able to customize and fine-tune the layout and functions to fit my
+              needs.
+            </p>
+            <p>
+              The process of designing this webpage helped me demystify and
+              enjoy, what I previously saw as unruley, the language of
+              JavaScript.
+            </p>
+          </div>
+        </div>
+      </section>
+      <!-- End Portfolio Details Section -->
+    </main>
+    <!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer">
-        <div class="footer-top">
-            <div class="container">
-                <div class="row">
-
-                    <!--<div class="col-lg-4 col-md-6">
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <!--<div class="col-lg-4 col-md-6">
                                     <div class="footer-info">
                                         <h3>Day</h3>
                                         <p>
@@ -201,38 +241,62 @@
                         </div>
                     </div>-->
 
-                    <div class="container">
-                        <div class="container d-flex">
-                            <!--<div class="contact-info mr-auto">
+            <div class="container">
+              <div class="container d-flex">
+                <!--<div class="contact-info mr-auto">
                                 <i class="icofont-envelope"></i> <a href="mailto:jamesbock10@gmail.com">jamesbock10@gmail.com</a>
                                 <i class="icofont-phone"></i> 412-613-6129
                             </div>-->
-                            <div class="social-links">
-                                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
-                                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
-                                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
-                                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
-                                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
-                                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
-                            </div>
-                        </div>
-                        <div class="copyright">
-                            &copy; Copyright <strong><span>Day</span></strong>. All Rights Reserved
-                        </div>
-                        <div class="credits">
-                            <!-- All the links in the footer should remain intact. -->
-                            <!-- You can delete the links only if you purchased the pro version. -->
-                            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
-                            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                            <div>Optimized by <a href="#hero">James Bock</a></div>
-                        </div>
-                    </div>
+                <div class="social-links">
+                  <a href="https://github.com/JamesBock/" target="_blank"
+                    ><i class="icofont-github"></i
+                  ></a>
+                  <a
+                    href="https://www.linkedin.com/in/james-bock-94886817/"
+                    target="_blank"
+                    ><i class="icofont-linkedin"></i
+                  ></a>
+                  <a
+                    href="https://www.strava.com/athletes/34465539"
+                    target="_blank"
+                    ><i class="icofont-runner"></i
+                  ></a>
+                  <a
+                    href="https://www.instagram.com/jamesisfast/"
+                    target="_blank"
+                    ><i class="icofont-instagram"></i
+                  ></a>
+                  <a
+                    href="https://my.playstation.com/profile/Honus_Swagner"
+                    target="_blank"
+                    ><i class="icofont-brand-playstation"></i
+                  ></a>
+                  <a
+                    href="http://steamcommunity.com/id/Honus_Swagner/"
+                    target="_blank"
+                    ><i class="icofont-brand-steam"></i
+                  ></a>
                 </div>
+              </div>
+              <div class="copyright">
+                &copy; Copyright <strong><span>Day</span></strong
+                >. All Rights Reserved
+              </div>
+              <div class="credits">
+                <!-- All the links in the footer should remain intact. -->
+                <!-- You can delete the links only if you purchased the pro version. -->
+                <!-- Licensing information: https://bootstrapmade.com/license/ -->
+                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
+                Designed by
+                <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                <div>Optimized by <a href="#hero">James Bock</a></div>
+              </div>
             </div>
+          </div>
         </div>
-
-    </footer><!-- End Footer -->
+      </div>
+    </footer>
+    <!-- End Footer -->
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
     <div id="preloader"></div>
@@ -249,7 +313,5 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-
-</body>
-
+  </body>
 </html>
