--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/BigHearts.png" rel="icon">
+  <link href="" rel="icon">
   <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -66,23 +66,29 @@
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#clients">Education</a></li>
-                    <li><a href="index.html#services">Experience</a></li>
-                    <li class="drop-down">
-                        <a href="index.html#portfolio">Portfolio</a>
-                        <ul>
-                            <li><a href="DrugInteracionsdetails.html">Drug Interactions</a></li>
-                            <li><a href="Compoundingdetails.html">Clinical Compounding</a></li>
-                            <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
-                            <li><a href="WebDesigndetails.html">Web design</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#contact">Contact</a></li>
-
+                  <li class="active"><a href="#hero">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li class="drop-down">
+                    <a href="#portfolio">Portfolio</a>
+                    <ul>
+                      <li>
+                        <a href="DrugInteracionsdetails.html">Drug Interactions</a>
+                      </li>
+                      <li>
+                        <a href="Compoundingdetails.html">Clinical Compounding</a>
+                      </li>
+                      <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
+                      <li><a href="WebDesigndetails.html">Web design</a></li>
+                      <li><a href="Researchdetails.html">Health Research</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="#education">Education</a></li>
+                  <li><a href="#experience">Experience</a></li>
+      
+                  <li><a href="#contact">Contact</a></li>
                 </ul>
-            </nav><!-- .nav-menu -->
+              </nav>
+              <!-- .nav-menu -->
 
         </div>
     </header><!-- End Header -->
@@ -105,12 +111,14 @@
         <section id="portfolio-details" class="portfolio-details">
             <div class="container">
 
-                <div class="portfolio-details-container">
+                <div class="portfolio-details-container"> 
 
-                    <div class="owl-carousel profile-carousel">
-                        <img src="assets/img/DrugInteractiondemoClip.gif" style="width:auto" class="img-fluid" alt="">
-                        <img src="assets/img/InteractionDetails.png" style="width:auto" class="img-fluid" alt="">
-                        <img src="assets/img/InteractionPhone.gif" style="width:auto; height:700px; justify-content:center" class="img-fluid" alt="">
+                   
+                    <div>
+                        <a class="venobox" data-overlay="#efgfeg"  data-gall="interactionGallery" href="assets/img/DrugInteractiondemoClip.gif"><img src="assets/img/DrugInteractiondemoClip.gif" style="width:auto" class="img-fluid" alt="">
+                            <a class="venobox" data-gall="interactionGallery" href="assets/img/InteractionDetails.png"></a>
+                            <a class="venobox" data-gall="interactionGallery" href="assets/img/InteractionPhone.gif"></a>
+
                     </div>
 
                     <div class="portfolio-info">
