Added support for state of  theme and drop down

--- a/APIdetails.html
+++ b/APIdetails.html
@@ -25,7 +25,7 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link id="cssTheme" href="" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: Day - v2.0.0
@@ -66,7 +66,7 @@
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                  <li class="active"><a href="#hero">Home</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="#about">About</a></li>
                   <li class="drop-down">
                     <a href="#portfolio">Portfolio</a>
@@ -259,6 +259,7 @@
     <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
+    <script  src="assets/js/state.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
