--- a/Researchdetails.html
+++ b/Researchdetails.html
@@ -25,7 +25,7 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link id="cssTheme" href="" rel="stylesheet">
 
     <!-- =======================================================
     * Template Name: Day - v2.0.0
@@ -65,7 +65,7 @@
             <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                  <li class="active"><a href="#hero">Home</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="#about">About</a></li>
                   <li class="drop-down">
                     <a href="#portfolio">Portfolio</a>
@@ -201,6 +201,7 @@
     <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
+    <script  src="assets/js/state.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
