--- a/WebDesigndetails.html
+++ b/WebDesigndetails.html
@@ -33,7 +33,7 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet" />
+    <link id="cssTheme" href="" rel="stylesheet" />
 
     <!-- =======================================================
     * Template Name: Day - v2.0.0
@@ -97,7 +97,7 @@
 
         <nav class="nav-menu d-none d-lg-block">
           <ul>
-            <li class="active"><a href="#hero">Home</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
             <li><a href="#about">About</a></li>
             <li class="drop-down">
               <a href="#portfolio">Portfolio</a>
@@ -289,7 +289,7 @@
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
                 Designed by
                 <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                <div>Optimized by <a href="#hero">James Bock</a></div>
+                <div>Optimized by <a href="index.html">James Bock</a></div>
               </div>
             </div>
           </div>
@@ -312,6 +312,7 @@
     <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
+    <script  src="assets/js/state.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
