--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 
-<head>
+<!-- <head onload="getTheme()"> -->
+    
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+  
   <title>Drug Interaction Project</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
@@ -25,7 +26,7 @@
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link id="cssTheme" href="" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Day - v2.0.0
@@ -66,7 +67,7 @@
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
-                  <li class="active"><a href="#hero">Home</a></li>
+                  <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="#about">About</a></li>
                   <li class="drop-down">
                     <a href="#portfolio">Portfolio</a>
@@ -246,7 +247,7 @@
     </footer><!-- End Footer -->
 
     <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
-    <div id="preloader"></div>
+ <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
     <script src="assets/vendor/jquery/jquery.min.js"></script>
@@ -259,8 +260,8 @@
     <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
+    <script src="assets/js/state.js"></script>
     <script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
