changed styling for graffiti

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
 
     <!-- Template Main CSS File -->
-    <link id="cssTheme" href="assets/css/hookem.css" rel="stylesheet" />
+    <link id="cssTheme" href="assets/css/hookem.css"  rel="stylesheet" />
 
     <!-- =======================================================
     * Template Name: Day - v2.0.0
@@ -98,7 +98,7 @@
     <!-- ======= Header ======= -->
     <header id="header" class="fixed-top">
       <div class="container d-flex align-items-center">
-        <h1 class="mr-auto"><a href="index.html">Hi, I'm James Bock</a></h1>
+        <h1  class="mr-auto"><a  href="index.html">Hi, I'm James Bock</a></h1>
         <!--<h2>Dev</h2>-->
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -125,7 +125,7 @@
             <li><a href="#experience">Experience</a></li>
             <li><a href="#contact">Contact</a></li>
             
-            <li class="drop-down"><a href="">Theme</a>
+            <li class="drop-down"><a href="" data-toggle="tooltip" data-placement="right" title="Hover to preview, click to set">Theme</a>
               <ul id="themeDrop">
                 <li>
                   <a id="assets/css/hookem.css">Hook 'em</a>
@@ -529,11 +529,11 @@
                 alt=""
               />
               <div class="portfolio-info">
-                <h4>DrugInteractionAPI</h4>
-                <p>Open-Source NuGet Package</p>
+                <h4>Health Research</h4>
+                <p>with robust statistical analysis</p>
                 <!--<a href="assets/img/DrugInteractionAPI.png" title="DrugInteractionAPI"><i class="bx bx-plus"></i></a>-->
                 <a
-                  href="APIdetails.html"
+                  href="Researchdetails.html"
                   class="details-link"
                   title="More Details"
                   ><i class="bx bx-link"></i
