--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -15,8 +15,10 @@
   <link href="assets/img/BigHearts.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link
+  href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Sedgwick Ave Display:300,300i,400,400i,500,500i,600,600i,700,700i"
+  rel="stylesheet"
+/>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -144,7 +146,7 @@
                         The module is designed with the use-case of an e-health record pinging the module with a patient ID that can be used to retrive the medications the patient is taking. The module then gathers the proper data, converts it into a readable form for the National Library of Medicine's Drug Interaction API, and parses the information returned from the API. Once the interactions are parsed, they must be connected with the order the prescriber wrote so modifications can be made if necessary based on the interactions.
                     </p>
                     <p>
-                        As shown above, the inter
+                        As shown above, the interface
                         is adaptive so it can be accessed on mobile devices if desired.
                     </p>
                 </div>
@@ -159,60 +161,7 @@
             <div class="container">
                 <div class="row">
 
-                    <!--<div class="col-lg-4 col-md-6">
-                                    <div class="footer-info">
-                                        <h3>Day</h3>
-                                        <p>
-                                            A108 Adam Street <br>
-                                            NY 535022, USA<br><br>
-                                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                                            <strong>Email:</strong> info@example.com<br>
-                                        </p>
-                                        <div class="social-links mt-3">
-                                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                            <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-2 col-md-6 footer-links">
-                                    <h4>Useful Links</h4>
-                                    <ul>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-lg-2 col-md-6 footer-links">
-                                    <h4>Our Services</h4>
-                                    <ul>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-lg-4 col-md-6 footer-newsletter">
-                                    <h4>Our Newsletter</h4>
-                                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-                                    <form action="" method="post">
-                                        <input type="email" name="email"><input type="submit" value="Subscribe">
-                                    </form>
-
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>-->
-
+                  
                     <div class="container">
                         <div class="container d-flex">
                             <!--<div class="contact-info mr-auto">
