improved graffiti layout

--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -128,7 +128,7 @@
                         <h3>Project Summary</h3>
                         <ul>
                             <li><strong>Tech</strong>: C#, Blazor, HTML, CSS, FHIR, REST API</li>
-                            <li><strong>Libraries</strong>: Bootstrap, MediatR, Hl7, NewtonsSoft, MatBlazor</li>
+                            <li><strong>Libraries</strong>: Bootstrap, MediatR, Hl7, NewtonSoft, MatBlazor</li>
                             <li><strong>Techniques</strong>: Dependency Injection, Channels, Asynchrony </li>
                             <li><strong>Start date</strong>: March, 2020</li>
                             <li><strong>Project URL</strong>: <a href="#">blog coming soon!</a></li>
