--- a/index.html
+++ b/index.html
@@ -159,8 +159,12 @@
         class="container position-relative"
         data-aos="fade-up"
         data-aos-delay="500"
+        
       >
+      <div class="container">
+        <span>Hi, I'm James</span>
         <h1>Hi, I'm James</h1>
+      </div>
         <h2>I design and develop healthcare solutions</h2>
         <h2>
           Looking to join a team and create amazing things in the Austin area
@@ -363,11 +367,12 @@
       </section>
       <!-- End About Section -->
       <!-- ======= Languages Section ======= -->
-      <div class="section-title">
+      <section id="languages" class="languages">
+        <div class="section-title">
+      <div class="container">
         <span>Top Technologies</span>
         <h2>Top Technologies</h2>
       </div>
-      <section id="languages" class="languages">
         <div class="container" data-aos="zoom-in">
           <div class="row d-flex align-items-center">
             <div class="col-lg-2 col-md-4 col-6">
@@ -419,6 +424,7 @@
             </div>
           </div>
         </div>
+      </div>
       </section>
       <!-- End Languages Section -->
       <!-- ======= Portfolio Section ======= -->
