Fixed alignment and forced scrolled for details pg

--- a/Researchdetails.html
+++ b/Researchdetails.html
@@ -37,30 +37,11 @@ rel="stylesheet"
 </head>
 
 <body>
-
-    <!-- ======= Top Bar ======= -->
-    <div style="background-color:#000000" id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
-        <div class="container d-flex">
-            <div class="contact-info mr-auto">
-                <i class="icofont-envelope"></i> <a href="mailto:jamesbock10@gmail.com">jamesbock10@gmail.com</a>
-                <i class="icofont-phone"></i> 412-613-6129
-            </div>
-            <div class="social-links">
-                <a href="https://github.com/JamesBock/" target="_blank"><i class="icofont-github"></i></a>
-                <a href="https://www.linkedin.com/in/james-bock-94886817/" target="_blank"><i class="icofont-linkedin"></i></a>
-                <a href="https://www.strava.com/athletes/34465539" target="_blank"><i class="icofont-runner"></i></a>
-                <a href="https://www.instagram.com/jamesisfast/" target="_blank"><i class="icofont-instagram"></i></a>
-                <a href="https://my.playstation.com/profile/Honus_Swagner" target="_blank"><i class="icofont-brand-playstation"></i></a>
-                <a href="http://steamcommunity.com/id/Honus_Swagner/" target="_blank"><i class="icofont-brand-steam"></i></a>
-            </div>
-        </div>
-    </div>
-
-    <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top ">
+<!-- ======= Header ======= -->
+    <header id="header" class="fixed-top header-scrolled">
         <div class="container d-flex align-items-center">
 
-            <h1 class="logo mr-auto"><a href="index.html">James Bock</a></h1>
+            <h1 class="logo mr-auto"><a href="index.html">Hi, I'm James Bock</a></h1>
 
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
