--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
       <!-- End About Section -->
       <!-- ======= Languages Section ======= -->
       <section id="languages" class="languages">
-        <div class="section-title">
-      <div class="container">
+        <div class="container">
+          <div class="section-title">
         <span>Top Technologies</span>
         <h2>Top Technologies</h2>
       </div>
@@ -671,7 +671,7 @@
           <div class="section-title">
             <span>Professional Experience</span>
             <h2>Professional Experience</h2>
-            <p>Developing and designing solutions across industires</p>
+            <!-- <p>Developing and designing solutions across industires</p> -->
           </div>
 
           <div class="row">
