More style improvements and undf theme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Sedgwick Ave Display:300,300i,400,400i,500,500i,600,600i,700,700i"
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Sedgwick Ave Display:300,300i,400,400i,500,500i,600,600i,700,700i|Share Tech Mono:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
 
@@ -50,7 +50,7 @@
 
     <!-- Template Main CSS File -->
     <link id="cssTheme" href="assets/css/hookem.css"  rel="stylesheet" />
-
+    
     <!-- =======================================================
     * Template Name: Day - v2.0.0
     * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
@@ -131,8 +131,14 @@
                   <a id="assets/css/hookem.css">Hook 'em</a>
                 </li>
                 <li>
+                  <a id="assets/css/sonic.css">Sonic</a>
+                </li>
+                <li>
                   <a id="assets/css/graffiti.css">Graffiti Park</a>
                 </li>
+                            <li>
+                              <a id="assets/css/undefinedStyle.css">undefined </a>
+                            </li>
                 <!-- <li>
                   <a id="Undefined">Undefined</a>
                 </li> -->
