--- a/Researchdetails.html
+++ b/Researchdetails.html
@@ -48,9 +48,9 @@ rel="stylesheet"
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
                   <li class="active"><a href="index.html">Home</a></li>
-                  <li><a href="#about">About</a></li>
+                  <li><a href="index.html#about">About</a></li>
                   <li class="drop-down">
-                    <a href="#portfolio">Portfolio</a>
+                    <a href="index.html#portfolio">Portfolio</a>
                     <ul>
                       <li>
                         <a href="DrugInteracionsdetails.html">Drug Interactions</a>
@@ -63,10 +63,10 @@ rel="stylesheet"
                       <li><a href="Researchdetails.html">Health Research</a></li>
                     </ul>
                   </li>
-                  <li><a href="#education">Education</a></li>
-                  <li><a href="#experience">Experience</a></li>
+                  <li><a href="index.html#education">Education</a></li>
+                  <li><a href="index.html#experience">Experience</a></li>
       
-                  <li><a href="#contact">Contact</a></li>
+                  <li><a href="index.html#contact">Contact</a></li>
                 </ul>
               </nav>
               <!-- .nav-menu -->
