--- a/APIdetails.html
+++ b/APIdetails.html
@@ -15,7 +15,7 @@
 
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Sedgwick Ave Display:300,300i,400,400i,500,500i,600,600i,700,700i"
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Sedgwick Ave Display:300,300i,400,400i,500,500i,600,600i,700,700i|Share Tech Mono:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
     <!-- Vendor CSS Files -->
@@ -52,18 +52,8 @@
                   <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="index.html#about">About</a></li>
                   <li class="drop-down">
-                    <a href="index.html#portfolio">Portfolio</a>
-                    <ul>
-                      <li>
-                        <a href="DrugInteracionsdetails.html">Drug Interactions</a>
-                      </li>
-                      <li>
-                        <a href="Compoundingdetails.html">Clinical Compounding</a>
-                      </li>
-                      <li><a href="APIdetails.html">DrugInteractionAPI</a></li>
-                      <li><a href="WebDesigndetails.html">Web design</a></li>
-                      <li><a href="Researchdetails.html">Health Research</a></li>
-                    </ul>
+                    <a id="portfolioDrop" href="index.html#portfolio">Portfolio</a>
+                    
                   </li>
                   <li><a href="index.html#education">Education</a></li>
                   <li><a href="index.html#experience">Experience</a></li>
@@ -110,8 +100,8 @@
                             <li><strong>Libraries</strong>: NewtonSoft</li>
                             <li><strong>Techniques</strong>: Custom Parsing, Automated Integration Testing, API Design </li>
                             <li><strong>Start date</strong>: May, 2020</li>
-                            <li><strong>Project URL</strong>: <a href="https://www.nuget.org/packages/DrugInteractionAPI/">NuGet Package</a></li>
-                            <li><strong style="color:#fff">Project URL</strong>: <a href="https://github.com/JamesBock/DrugInteractionAPI">GitHub Repository</a></li>
+                            <li><strong>Project URLs</strong>: <a href="https://www.nuget.org/packages/DrugInteractionAPI/">NuGet Package</a></li>
+                            <li><strong style="color:transparent">Project URLs</strong>: <a href="https://github.com/JamesBock/DrugInteractionAPI">GitHub Repository</a></li>
                         </ul>
                     </div>
 
