--- a/NeonatalNutritiondetails.html
+++ b/NeonatalNutritiondetails.html
@@ -1,10 +1,10 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Web Design</title>
+    <title>Total Neonatal Nutrition</title>
     <meta content="" name="descriptison" />
     <meta content="" name="keywords" />
 
@@ -17,7 +17,6 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Sedgwick Ave Display:300,300i,400,400i,500,500i,600,600i,700,700i|Share Tech Mono:300,300i,400,400i,500,500i,600,600i,700,700i"
       rel="stylesheet"
     />
-
     <!-- Vendor CSS Files -->
     <link
       href="assets/vendor/bootstrap/css/bootstrap.min.css"
@@ -36,11 +35,11 @@
     <link id="cssTheme" href="" rel="stylesheet" />
 
     <!-- =======================================================
-    * Template Name: Day - v2.0.0
-    * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
-    * Author: BootstrapMade.com
-    * License: https://bootstrapmade.com/license/
-    ======================================================== -->
+  * Template Name: Day - v2.0.0
+  * Template URL: https://bootstrapmade.com/day-multipurpose-html-template-for-free/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
   </head>
 
   <body>
@@ -58,7 +57,7 @@
             <li class="drop-down">
               <a id="portfolioDrop" href="index.html#portfolio">Portfolio</a>
             </li>
-            <li><a href="index.html#education">Education</a></li>
+            <li><a href="index.htmleducation">Education</a></li>
             <li><a href="index.html#experience">Experience</a></li>
 
             <li><a href="index.html#contact">Contact</a></li>
@@ -75,9 +74,9 @@
         <div class="container">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Web design</li>
+            <li>Clinical Compounding</li>
           </ol>
-          <h2>Web design</h2>
+          <h2>Clinical Compounding</h2>
         </div>
       </section>
       <!-- End Breadcrumbs -->
@@ -85,43 +84,99 @@
       <section id="portfolio-details" class="portfolio-details">
         <div class="container">
           <div class="portfolio-details-container">
-            <a
-              href="assets/img/ShortFolio.gif"
-              class="venobox"
-              data-gall="webGallery"
-              ><img
-                style="width: auto;"
-                class="img-fluid"
-                src="assets/img/ShortFolio.gif"
-                alt=""
-            /></a>
+            <div>
+              <a
+                class="venobox"
+                data-gall="compoundGallery"
+                href="assets/img/AminoMax.gif"
+                ><img
+                  style="width: auto;"
+                  class="img-fluid"
+                  src="assets/img/AminoMax.gif"
+                  alt=""
+              /></a>
+              <a
+                class="venobox"
+                data-gall="compoundGallery"
+                href="assets/img/PolicyScrollUnitChange.gif"
+              ></a>
+            </div>
             <div class="portfolio-info">
               <h3>Project Summary</h3>
               <ul>
+                <li><strong>Tech</strong>: C#, UWP, SQL</li>
                 <li>
-                  <strong>Tech</strong>: HTML, CSS, JavaScript, GitHub pages
+                  <strong>Libraries</strong>: ReactiveUI, Dynamic Data, MediatR,
+                  Stateless, Entity Framework Core
                 </li>
-                <li><strong>Libraries</strong>: Bootstrap</li>
-                <li><strong>Techniques</strong>: Adaptive design</li>
-                <li><strong>Start date</strong>: May, 2020</li>
+                <li>
+                  <strong>Techniques</strong>: Reactive Programming, Dependency
+                  Injection
+                </li>
+                <li><strong>Start date</strong>: July, 2019</li>
+                <!--<li><strong>Project URL</strong>: <a href="#">blog coming soon!</a></li>-->
               </ul>
             </div>
           </div>
 
           <div class="portfolio-description">
-            <h2>Personal Portfolio design</h2>
+            <h2>Clinical Compounding</h2>
             <p>
-              In order to find a development team to make awesome projects with,
-              I needed a personal portfolio to show my projects. I had some
-              experience with web technologies through Blazor, but never worked
-              directly with JS before. Starting from a pre-built template, I was
-              able to customize and fine-tune the layout and functions to fit my
-              needs.
+              This project is a solution for a problem I encountered while
+              working as Dietitian in a NICU. Ordering intravenous nutrition was
+              still being written on paper forms and being faxed to place the
+              order. I collected data for months on errors made during the
+              process, and determined that over 90-95% of them could have been
+              corrected with basic Clinical Decision Support.
             </p>
             <p>
-              The process of designing this webpage helped me demystify and
-              enjoy, what I previously saw as unruley, the language of
-              JavaScript.
+              When the prescriber goes to place an order, the system evaluates
+              the contents of the order in terms of Ingredients (i.e. the
+              constituents of the order, like Sodium Chloride or an Amino Acid
+              Solution like Trophamine) and Factors (the constituents of the
+              Ingredients, like sodium or total amino acids). The program
+              contextualizes those constituents in terms of the Policies the
+              prescriber's facility has set and chooses the most appropriate
+              control for ordering each ingredient. As of now, Policies
+              represent minimums, maximums and a recommended range that can be
+              set in the context of the patient, a specified duration, an order,
+              or another Factor. As the user manipulates the Ingredient amounts,
+              the program continually assesses these Policies and gives feedback
+              to the prescriber through the controls.
+            </p>
+            <p>
+              As shown above in the first image, this is shown when one
+              Ingredient, containing the Factor Amino Acids, increases and the
+              control of another Ingredient containing Amino Acids is modulated
+              to reduce the amount of that Ingredient which is available for
+              ordering to conform with the Policies. Once the Policy maximum is
+              reached (in this case, the Policy with the lowest threshold is 5
+              grams per kilogram of body weight), no Ingredient containing that
+              Factor can be increased until one of the Ingredients is decreased
+              to prevent overordering. While all of this is happening, the
+              totals of all Factors in the Order are updated in real time in the
+              first column to the right and the second column is a summary of
+              the amount the patient is receiving of each Factor across all
+              Orders. The second column is time-adjusted and forward-looking,
+              meaning if the Order is being placed at noon but won't be given to
+              the patient until 10PM, the system displays amounts from Orders
+              that will be active at 10PM and projects through the duration of
+              the Order. Functionality will be added for backward-looking
+              aggregation as well.
+            </p>
+            <p>
+              Image two is zoomed in to one of the Ingredient controls. Each
+              control displays a scrollable list of all the Policies that are
+              applied to the control for the prescriber's reference. The list is
+              generated with specificity to the Patient's "Type" (e.g. Early
+              Neonate, Pediatric, Older Adult, etc...) and the administration
+              route of the medication. Disease state specific Policies are
+              currently in development. The Factor's display units can be
+              changed to conform to a given Policy by double-clicking on the
+              item to cycle through Policies for that factor. This functionality
+              is also available in the summary columns. Once the prescriber is
+              happy with all of the components, the Order is sent via FHIR/HL7
+              to the EHR and the compounder, if appropriate.
             </p>
           </div>
         </div>
@@ -134,61 +189,6 @@
       <div class="footer-top">
         <div class="container">
           <div class="row">
-            <!--<div class="col-lg-4 col-md-6">
-                                    <div class="footer-info">
-                                        <h3>Day</h3>
-                                        <p>
-                                            A108 Adam Street <br>
-                                            NY 535022, USA<br><br>
-                                            <strong>Phone:</strong> +1 5589 55488 55<br>
-                                            <strong>Email:</strong> info@example.com<br>
-                                        </p>
-                                        <div class="social-links mt-3">
-                                            <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                                            <a href="#" class="
-                        "><i class="bx bxl-facebook"></i></a>
-                                            <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                                            <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                                            <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="col-lg-2 col-md-6 footer-links">
-                                    <h4>Useful Links</h4>
-                                    <ul>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-lg-2 col-md-6 footer-links">
-                                    <h4>Our Services</h4>
-                                    <ul>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                                        <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-lg-4 col-md-6 footer-newsletter">
-                                    <h4>Our Newsletter</h4>
-                                    <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-                                    <form action="" method="post">
-                                        <input type="email" name="email"><input type="submit" value="Subscribe">
-                                    </form>
-
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>-->
-
             <div class="container">
               <div class="container d-flex">
                 <!--<div class="contact-info mr-auto">
@@ -237,7 +237,7 @@
                 <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
                 Designed by
                 <a href="https://bootstrapmade.com/">BootstrapMade</a>
-                <div>Optimized by <a href="index.html">James Bock</a></div>
+                <div>Optimized by <a href="#hero">James Bock</a></div>
               </div>
             </div>
           </div>
